k8s/app-pipeline-trigger/el-undertow-trigger-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-undertow-trigger
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: undertow-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: el-undertow-app-eventlistener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
